[gd_scene load_steps=11 format=3 uid="uid://d2by83v0k8ifh"]

[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_rudbt"]
[ext_resource type="AudioStream" uid="uid://60xmhlwu0ga4" path="res://Assets/Music/fish_game_title.wav" id="1_t67bj"]
[ext_resource type="Resource" uid="uid://btepo6q5hbj70" path="res://Inventory/player_inventory.tres" id="2_4k71y"]
[ext_resource type="PackedScene" uid="uid://hwdfkcp5wx86" path="res://Scenes/Animated Background/animated_sprite_2d.tscn" id="2_mjrku"]
[ext_resource type="FontFile" uid="uid://b5nrh027kp47x" path="res://Assets/Fonts/Perfect DOS VGA 437.ttf" id="2_rgxw4"]
[ext_resource type="Resource" uid="uid://bdetm4630h2nk" path="res://Inventory/fish_tank_fish_inventory.tres" id="3_vo8ha"]
[ext_resource type="Resource" uid="uid://c53pfdiqblqvt" path="res://Inventory/decor_fish_tank_inventory.tres" id="4_puyct"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ub6ix"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n5xnv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_egic3"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rudbt")
inv = ExtResource("2_4k71y")
fish_inv = ExtResource("3_vo8ha")
decor_inv = ExtResource("4_puyct")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("2_mjrku")]

[node name="TitleTextBlue" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -228.0
offset_right = 410.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0431373, 0, 0.494118, 0.576471)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 100
text = "Little Oannes"
horizontal_alignment = 1

[node name="TitleTextWhite" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -220.0
offset_right = 418.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 100
text = "Little Oannes"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 12.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub6ix")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n5xnv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_egic3")
text = "New Game"
icon_alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub6ix")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n5xnv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_egic3")
text = "Continue"
icon_alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub6ix")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n5xnv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_egic3")
text = "Play"
icon_alignment = 1

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub6ix")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n5xnv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_egic3")
text = "Options"
icon_alignment = 1

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub6ix")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n5xnv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_egic3")
text = "Credits"
icon_alignment = 1

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rgxw4")
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub6ix")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n5xnv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_egic3")
text = "Quit"
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_t67bj")
volume_db = -6.0
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
